--- a/Blubb/Info.plist
+++ b/Blubb/Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSContactsUsageDescription</key>
+	<string>Füge die Adresse eines Kontaktes zu einem Event hinzu.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Füge einen Standort zu einem Event hinzu.</string>
+	<key>NSCalendarsUsageDescription</key>
+	<string>Exportiere eine Aktivität in deinen Kalender.</string>
 	<key>UIApplicationShortcutItems</key>
 	<array>
 		<dict>
